tracing-demo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-demo
  namespace: default
  labels:
    app: tracing-demo
spec:
  selector:
    matchLabels:
      app: tracing-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: tracing-demo
    spec:
      containers:
        - name: tracing-demo
          image: tracing-demo:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 8080
