tracing-demo/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracing-demo
  namespace: tracing
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - tracing.manojpannala.com
    secretName: tracing.manojpannala.com
  rules:
  - host: tracing.manojpannala.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tracing-demo
            port:
              number: 8080
